--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./src/assets/style/base.css">
-    <link rel="stylesheet" href="src/assets/style/grid/index.css">
-    <link rel="stylesheet" href="src/assets/style/grid/cartao.css">
-    <link rel="stylesheet" href="src/assets/style/grid/secao.css">
+    <link rel="stylesheet" href="./src/assets/style/grid/index.css">
+    <link rel="stylesheet" href="./src/assets/style/grid/cartao.css">
+    <link rel="stylesheet" href="./src/assets/style/grid/secao.css">
+    <link rel="stylesheet" href="./src/assets/style/grid/menu.css">
+    <link rel="stylesheet" href="./src/assets/style/grid/navbar.css">
     <link rel="stylesheet" href="./src/assets/style/responsivo.css">
 </head>
 
@@ -28,9 +30,7 @@
             <ul>
                 <li class="menu-lateral__link menu-lateral__link--home ativo"><a href="#">Home</a></li>
                 <li class="menu-lateral__link menu-lateral__link--busca"><a href="#">Busca</a></li>
-                <li class="menu-lateral__link menu-lateral__link--biblioteca"><a href="#">Sua Biblioteca</a>id black;} renders a box that is 350px wide, with the area for content being 330px wide. The content box can't be negative and is floored to 0, making it impossible to use border-box to make the element disappear.
-
-                    Here the dimensions of the element are calculated a</li>
+                <li class="menu-lateral__link menu-lateral__link--biblioteca"><a href="#">Sua Biblioteca</a></li>
             </ul>
         </nav>
         <h3 class="menu-lateral__playlist">Playlists</h3>
